Final Change debug

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
   <nav class="navbar">
-  <a href="/" class="navbar-brand">Chatty</a>
+  <a href="/" class="navbar-brand">Chatty <small>(3 users online)</small></a>
 </nav>
   <div id="react-root"></div>
   <script src="/build/bundle.js"></script>
